<resources>
    <string name="app_name">MyEcotrip</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string-array name="selectAction">
        <item>Resend OTP</item>
        <item>Enter OTP Manually</item>
    </string-array>
    <string name="title_activity_initial">CCAvenueMobile</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="pay_button">Pay</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="access_code">Access Code</string>
    <string name="title_activity_status">CCAvenueMobile</string>
    <string name="access_code_id">AVEG72EH70BY50GEYB</string>
    <string name="merchant_user_id">81401</string>
    <string name="currencey_id">INR</string>
    <string name="redirect_url_id">http://35.154.28.131/myecotripapis/public/index.php/ecotrails/responseReceiver</string>
    <string name="cancel_url_id">http://35.154.28.131/myecotripapis/public/index.php/ecotrails//failureReceiver</string>
    <string name="rsa_url_id">http://35.154.28.131/myecotripapis/public/index.php/getRSAkey</string>


    <string name="distance">Distance</string>
    <string name="trek_count">Trekkers</string>
    <string name="time_taken">Time</string>
    <string name="taril_type">Taril Type</string>

    <string name="starting_point">Starting Point</string>
    <string name="end_point">End Point</string>
    <string name="treakking_distance">Treakking Distance</string>
    <string name="reporting_time">Reporting time</string>
    <string name="treakking_duration">Treakking Duration</string>
    <string name="treakking_type">Treakking Type</string>
    <string name="rupes">\u20B9</string>
    <string name="about_us">About Us</string>
    <string name="about_echoytrails">About Ecotrails</string>
    <string name="echotrails_details">Go out of your way, beyond what you know, finding your path, travelling that extra mile, discovering the untouched treasures of the nature. Novice or expert you shall always enjoy the challenge that a trek presents to you. Wander into the nature, live the places you have only dreamed of visiting after watching a documentary or reading a book. No inhibition, no deceit, discover yourself amidst an unknown trail.</string>
    <string name="why">Why trek</string>
    <string name="desc">Trekking is a fine group activity where adrenaline is articulate, where a lovely nature loving community thrives, where you make real friends and where miles are memories.</string>
    <string name="grant_permission_phone">Please grant permission for phone call.</string>
    <string name="currencey_str">\u20B9</string>
    <string name="no_of_trekkers">No of trekkers</string>
    <string name="booking_tickets_no">1</string>
    <string name="seperator">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</string>
    <string name="total_trip">Total Trip:</string>
    <string name="check_in">Check in</string>
    <string name="price_per_trekker">Price per trekker</string>
    <string name="total_price">Total price</string>
    <string name="service_charges">Service charges</string>
    <string name="booking_title">Booking Details</string>
    <string name="billing_details">Billing details</string>
    <string name="no_data_found">There is no data available.</string>
    <string-array name="country">
        <item>India</item>
        <item>Others</item>
    </string-array>


</resources>
