<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="@dimen/margin_extra_small"
    android:layout_marginRight="@dimen/margin_extra_small"
    android:layout_marginTop="5dp"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivTrail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/eco_image_height"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:scaleType="fitXY"
            android:src="@drawable/icon_placeholder" />


        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorBlackTransparent"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="4">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/hafe_margin"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewSmallWhiteMargin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_extra_small_one"
                    android:padding="0dp"
                    android:text="@string/trek_count"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tvtrek_count"
                    style="@style/TextViewSmallWhiteBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="40"
                    android:textSize="12dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/hafe_margin"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewSmallWhiteMargin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_extra_small_one"
                    android:padding="0dp"
                    android:text="@string/distance"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tvDistance"
                    style="@style/TextViewSmallWhiteBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1hr 25m"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/hafe_margin"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewSmallWhiteMargin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_extra_small_one"
                    android:padding="0dp"
                    android:text="@string/time_taken"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tvTime"
                    style="@style/TextViewSmallWhiteBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="45m"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/hafe_margin"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewSmallWhiteMargin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_extra_small_one"
                    android:padding="0dp"
                    android:text="@string/taril_type"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tvTrailType"
                    style="@style/TextViewSmallWhiteBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="400"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/tvDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:text="Details"
                android:visibility="gone" />
        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout"
        android:padding="@dimen/margin_extra_small"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        tools:text="TextView" />
</android.support.v7.widget.CardView>