<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <include
            android:id="@+id/order_summary_toolbar"
            layout="@layout/common_toolbar" />
        <!--<android.support.v7.widget.RecyclerView
            android:layout_below="@+id/toolbar"
            android:id="@+id/rvCommon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"/>-->
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_summary_toolbar">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnBookNow"
                android:layout_margin="@dimen/margin_extra_small">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.CardView
                        android:id="@+id/card_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/margin"
                            android:background="@color/card_back_light_grey">
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:src="@drawable/nature_1"
                                android:fitsSystemWindows="true"
                                android:scaleY="1.3"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/margin"
                                android:layout_marginTop="@dimen/margin_extra_small"
                                android:textSize="@dimen/title_text"
                                android:textColor="@color/orange"
                                android:text="MakaliDurga"/>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:id="@+id/tv_booking_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/card_title"
                        android:layout_margin="@dimen/margin"
                        android:text="@string/booking_title"
                        android:textSize="@dimen/title_text_small" />

                    <TextView
                        android:id="@+id/tv_booked_tickets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_booking_title"
                        android:layout_marginLeft="@dimen/margin"
                        android:text="@string/booking_title" />

                    <TextView
                        android:id="@+id/tv_booked_tickets_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/tv_booking_title"
                        android:layout_marginRight="@dimen/margin"
                        android:text="@string/booking_tickets_no" />

                    <TextView
                        android:id="@+id/tichets_count_seperator"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dotted_seperator_height"
                        style="@style/DottedSeperator"
                        android:layout_below="@+id/tv_booked_tickets_count"
                        />

                    <TextView
                        android:id="@+id/tv_check_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tichets_count_seperator"
                        android:layout_marginLeft="@dimen/margin"
                        android:text="@string/booking_title" />

                    <TextView
                        android:id="@+id/tv_check_in_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/tichets_count_seperator"
                        android:layout_marginRight="@dimen/margin"
                        android:text="@string/booking_tickets_no" />

                    <TextView
                        android:id="@+id/tichets_check_in_seperator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_check_in"
                        style="@style/DottedSeperator"/>

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tichets_check_in_seperator"
                        android:layout_marginLeft="@dimen/margin"
                        android:text="@string/booking_title" />

                    <TextView
                        android:id="@+id/tv_price_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/tichets_check_in_seperator"
                        android:layout_marginRight="@dimen/margin"
                        android:text="@string/booking_tickets_no" />

                    <TextView
                        android:id="@+id/tichets_price_seperator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_price"
                        style="@style/DottedSeperator" />


                    <TextView
                        android:id="@+id/tv_billing_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tichets_price_seperator"
                        android:layout_margin="@dimen/margin"
                        android:text="@string/booking_title"
                        android:textSize="@dimen/title_text_small" />

                    <TextView
                        android:id="@+id/tv_total_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_billing_title"
                        android:layout_marginLeft="@dimen/margin"
                        android:text="@string/booking_title" />

                    <TextView
                        android:id="@+id/tv_total_price_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/tv_billing_title"
                        android:layout_marginRight="@dimen/margin"
                        android:text="@string/booking_tickets_no" />

                    <TextView
                        android:id="@+id/tichets_total_seperator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_total_price"
                        style="@style/DottedSeperator" />

                    <TextView
                        android:id="@+id/tv_service_charge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tichets_total_seperator"
                        android:layout_marginLeft="@dimen/margin"
                        android:text="@string/booking_title" />

                    <TextView
                        android:id="@+id/tv_service_charge_amaount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/tichets_total_seperator"
                        android:layout_marginRight="@dimen/margin"
                        android:text="@string/booking_tickets_no" />

                    <TextView
                        android:id="@+id/tichets_service_seperator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_service_charge"
                        style="@style/DottedSeperator"/>

                    <View
                        android:id="@+id/bottom_seperator"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/margin_extra_small"
                        android:layout_below="@id/tichets_service_seperator"
                        android:background="@color/gray"/>

                    <TextView
                        android:id="@+id/total_cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/bottom_seperator"
                        android:layout_marginLeft="@dimen/margin"
                        android:paddingBottom="@dimen/bottom_text_padding"
                        android:layout_alignParentBottom="true"
                        android:text="@string/total_trip" />

                    <TextView
                        android:id="@+id/tv_total_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_extra_small"
                        android:text="@string/about_echoytrails"
                        android:layout_below="@+id/bottom_seperator"
                        android:layout_toRightOf="@+id/total_cost"
                        android:textSize="@dimen/title_text" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </android.support.v4.widget.NestedScrollView>

        <Button
            android:id="@+id/btnBookNow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:text="Add Booking Details"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </RelativeLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>